--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -118,38 +118,7 @@
                 app:layout_constraintTop_toTopOf="@id/textViewUserName"
                 app:layout_constraintBottom_toBottomOf="@id/textViewUserName"/>
 
-            <LinearLayout
-                android:id="@+id/layoutFollowerInfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginTop="12dp"
-                android:background="@color/colorForDevider"
-               android:layout_marginHorizontal="60dp"
-                android:paddingTop="4dp"
-                android:paddingBottom="4dp"
-                app:layout_constraintTop_toBottomOf="@id/cardViewProfileIcon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent">
 
-                <TextView
-                    android:id="@+id/textViewFollowerLabel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/my_follower"
-                    android:textSize="12sp"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:id="@+id/textViewFollowerCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/numberFollower"
-                    android:textSize="12sp"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="@color/black" />
-            </LinearLayout>
 
 
             <View
@@ -160,7 +129,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:background="@color/colorForDevider"
-                app:layout_constraintTop_toBottomOf="@id/layoutFollowerInfo"
+                app:layout_constraintTop_toBottomOf="@id/btnEditProfile"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
