--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,14 +8,17 @@
     android:fitsSystemWindows="true"
     tools:context=".presentation.feature.auth.LoginActivity">
 
-    <!-- Language Spinner in the top right corner -->
     <Spinner
         android:id="@+id/spinner_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="120dp"
-        android:background="@drawable/spinner_border_round"
+        android:minWidth="140dp"
+        android:background="@drawable/spinner_bg"
+        android:padding="8dp"
         android:layout_margin="16dp"
+        android:spinnerMode="dropdown"
+        android:popupBackground="@android:color/white"
+        android:dropDownWidth="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -163,32 +166,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_or">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
                 android:padding="12dp">
 
                 <ImageView
                     android:id="@+id/iv_google_icon"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:layout_marginStart="70dp"
-                    android:src="@drawable/ic_google"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_google" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/sign_in_with_google"
                     android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:textSize="16sp" />
+            </LinearLayout>
+
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -210,9 +209,10 @@
             android:layout_marginStart="4dp"
             android:text="@string/register_now"
             android:textColor="@color/selectedicon"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_no_account"
+            app:layout_constraintBottom_toBottomOf="@id/tv_no_account"
             app:layout_constraintStart_toEndOf="@id/tv_no_account"
-            app:layout_constraintTop_toTopOf="@id/tv_no_account" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
